--- a/gdnative/lib/CMakeLists.txt
+++ b/gdnative/lib/CMakeLists.txt
@@ -19,6 +19,7 @@ set(SRCS "${PROJECT_SOURCE_DIR}/src/Loaders/MagicaVoxelLoader.cpp"
          "${PROJECT_SOURCE_DIR}/src/Meshers/IMesher.cpp"
          "${PROJECT_SOURCE_DIR}/src/Meshers/MarchingCubesMesher.cpp"
          "${PROJECT_SOURCE_DIR}/src/Meshers/Slicer/Slicer.cpp"
+         "${PROJECT_SOURCE_DIR}/src/Meshers/MeshBuilder.cpp"
         #  "${PROJECT_SOURCE_DIR}/src/Meshers/VerticesReducer.cpp"
          "${PROJECT_SOURCE_DIR}/src/Exporters/WavefrontObjExporter.cpp"
          "${PROJECT_SOURCE_DIR}/src/Exporters/IExporter.cpp"
