--- a/gdnative/lib/CMakeLists.txt
+++ b/gdnative/lib/CMakeLists.txt
@@ -24,6 +24,7 @@ set(SRCS "${PROJECT_SOURCE_DIR}/src/Loaders/VoxelMesh.cpp"
          "${PROJECT_SOURCE_DIR}/src/Meshers/IMesher.cpp"
          "${PROJECT_SOURCE_DIR}/src/Meshers/MarchingCubesMesher.cpp"
          "${PROJECT_SOURCE_DIR}/src/Meshers/Slicer/Slicer.cpp"
+         "${PROJECT_SOURCE_DIR}/src/Meshers/Slicer/BetterSlicer.cpp"
          "${PROJECT_SOURCE_DIR}/src/Meshers/MeshBuilder.cpp"
         #  "${PROJECT_SOURCE_DIR}/src/Meshers/VerticesReducer.cpp"
          "${PROJECT_SOURCE_DIR}/src/Exporters/WavefrontObjExporter.cpp"
