--- a/gdnative/lib/CMakeLists.txt
+++ b/gdnative/lib/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
-set(SRCS "${PROJECT_SOURCE_DIR}/src/Loaders/VoxelMesh.cpp"
+set(SRCS "${PROJECT_SOURCE_DIR}/src/Voxel/VoxelMesh.cpp"
 
          "${PROJECT_SOURCE_DIR}/src/Formats/Implementations/MagicaVoxelFormat.cpp"
          "${PROJECT_SOURCE_DIR}/src/Formats/Implementations/GoxelFormat.cpp"
@@ -19,20 +19,21 @@ set(SRCS "${PROJECT_SOURCE_DIR}/src/Loaders/VoxelMesh.cpp"
          "${PROJECT_SOURCE_DIR}/src/Formats/IVoxelFormat.cpp"
          "${PROJECT_SOURCE_DIR}/src/Formats/Implementations/VEditFormat.cpp"
 
-         "${PROJECT_SOURCE_DIR}/src/Meshers/SimpleMesher.cpp"
-         "${PROJECT_SOURCE_DIR}/src/Meshers/GreedyMesher.cpp"
-         "${PROJECT_SOURCE_DIR}/src/Meshers/IMesher.cpp"
-         "${PROJECT_SOURCE_DIR}/src/Meshers/MarchingCubesMesher.cpp"
-         "${PROJECT_SOURCE_DIR}/src/Meshers/Slicer/Slicer.cpp"
-         "${PROJECT_SOURCE_DIR}/src/Meshers/Slicer/BetterSlicer.cpp"
-         "${PROJECT_SOURCE_DIR}/src/Meshers/MeshBuilder.cpp"
-        #  "${PROJECT_SOURCE_DIR}/src/Meshers/VerticesReducer.cpp"
-         "${PROJECT_SOURCE_DIR}/src/Exporters/WavefrontObjExporter.cpp"
-         "${PROJECT_SOURCE_DIR}/src/Exporters/IExporter.cpp"
-         "${PROJECT_SOURCE_DIR}/src/Exporters/SpriteStackingExporter.cpp"
-         "${PROJECT_SOURCE_DIR}/src/Exporters/GodotSceneExporter.cpp"
-         "${PROJECT_SOURCE_DIR}/src/Exporters/glTF/GLTFExporter.cpp"
-         "${PROJECT_SOURCE_DIR}/src/Exporters/PLYExporter.cpp"
+         "${PROJECT_SOURCE_DIR}/src/Meshing/Implementations/SimpleMesher.cpp"
+         "${PROJECT_SOURCE_DIR}/src/Meshing/Implementations/GreedyMesher.cpp"
+         "${PROJECT_SOURCE_DIR}/src/Meshing/IMesher.cpp"
+         "${PROJECT_SOURCE_DIR}/src/Meshing/Implementations/MarchingCubesMesher.cpp"
+         "${PROJECT_SOURCE_DIR}/src/Meshing/Implementations/Slicer/Slicer.cpp"
+         "${PROJECT_SOURCE_DIR}/src/Meshing/Implementations/Slicer/BetterSlicer.cpp"
+         "${PROJECT_SOURCE_DIR}/src/Meshing/MeshBuilder.cpp"
+        #  "${PROJECT_SOURCE_DIR}/src/Meshing/Implementations/VerticesReducer.cpp"
+         "${PROJECT_SOURCE_DIR}/src/Export/IExporter.cpp"
+
+         "${PROJECT_SOURCE_DIR}/src/Export/Implementations/WavefrontObjExporter.cpp"
+         "${PROJECT_SOURCE_DIR}/src/Export/Implementations/SpriteStackingExporter.cpp"
+         "${PROJECT_SOURCE_DIR}/src/Export/Implementations/GodotSceneExporter.cpp"
+         "${PROJECT_SOURCE_DIR}/src/Export/Implementations/glTF/GLTFExporter.cpp"
+         "${PROJECT_SOURCE_DIR}/src/Export/Implementations/PLYExporter.cpp"
          "${PROJECT_SOURCE_DIR}/src/stb_image_write.c"
          "${PROJECT_SOURCE_DIR}/src/Texture.cpp")
 #set(LIBS "")
