--- a/gdnative/lib/CMakeLists.txt
+++ b/gdnative/lib/CMakeLists.txt
@@ -25,8 +25,9 @@ set(SRCS "${PROJECT_SOURCE_DIR}/src/Voxel/VoxelMesh.cpp"
          "${PROJECT_SOURCE_DIR}/src/Meshing/Implementations/MarchingCubesMesher.cpp"
          "${PROJECT_SOURCE_DIR}/src/Meshing/Implementations/Slicer/Slicer.cpp"
          "${PROJECT_SOURCE_DIR}/src/Meshing/Implementations/Slicer/BetterSlicer.cpp"
+         "${PROJECT_SOURCE_DIR}/src/Meshing/Implementations/Triangulation/Triangulate.cpp"
          "${PROJECT_SOURCE_DIR}/src/Meshing/MeshBuilder.cpp"
-        #  "${PROJECT_SOURCE_DIR}/src/Meshing/Implementations/VerticesReducer.cpp"
+         "${PROJECT_SOURCE_DIR}/src/Meshing/VerticesReducer.cpp"
          "${PROJECT_SOURCE_DIR}/src/Export/IExporter.cpp"
 
          "${PROJECT_SOURCE_DIR}/src/Export/Implementations/WavefrontObjExporter.cpp"
