--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -24,6 +24,7 @@ set(SRCS "${PROJECT_SOURCE_DIR}/src/Voxel/VoxelMesh.cpp"
          "${PROJECT_SOURCE_DIR}/src/Meshing/Implementations/GreedyMesher.cpp"
          "${PROJECT_SOURCE_DIR}/src/Meshing/IMesher.cpp"
          "${PROJECT_SOURCE_DIR}/src/Meshing/Implementations/MarchingCubesMesher.cpp"
+         "${PROJECT_SOURCE_DIR}/src/Meshing/Implementations/FloodMesher.cpp"
          "${PROJECT_SOURCE_DIR}/src/Meshing/Implementations/Slicer/Slicer.cpp"
          "${PROJECT_SOURCE_DIR}/src/Meshing/Implementations/Slicer/BetterSlicer.cpp"
          "${PROJECT_SOURCE_DIR}/src/Meshing/Implementations/Triangulation/Triangulate.cpp"
