--- a/gdnative/CMakeLists.txt
+++ b/gdnative/CMakeLists.txt
@@ -1,14 +1,19 @@
 cmake_minimum_required(VERSION 3.3.0)
-project(godotVCore VERSION 0.1.0 LANGUAGES CXX C)
-
+project(godotvoxeloptimizer VERSION 0.1.0 LANGUAGES CXX C)
 
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+include_directories("${PROJECT_SOURCE_DIR}/include"
+                    "${PROJECT_SOURCE_DIR}/../godot-cpp/include"
+                    "${PROJECT_SOURCE_DIR}/../godot-cpp/include/core"
+                    "${PROJECT_SOURCE_DIR}/../godot-cpp/include/gen"
+                    "${PROJECT_SOURCE_DIR}/../godot-cpp/godot-headers"
+)
 add_subdirectory(../lib libVCore)
 
 set(SRCS "${PROJECT_SOURCE_DIR}/main.cpp"
-         "${PROJECT_SOURCE_DIR}/src/GodotVCore.cpp")
+         "${PROJECT_SOURCE_DIR}/src/GodotVoxelOptimizer.cpp")
 set(LIBS "VCore")
 
 if(WIN32)
@@ -17,16 +22,9 @@ else(WIND32)
     set(LIBS ${LIBS} "godot-cpp.linux.release.64")
 endif(WIN32)
 
-
-include_directories("${PROJECT_SOURCE_DIR}/../godot-cpp/include"
-                    "${PROJECT_SOURCE_DIR}/../godot-cpp/include/core"
-                    "${PROJECT_SOURCE_DIR}/../godot-cpp/include/gen"
-                    "${PROJECT_SOURCE_DIR}/../godot-cpp/godot-headers"
-                    "${PROJECT_SOURCE_DIR}/../lib/include"
-                    "${PROJECT_SOURCE_DIR}/include")
+include_directories("${PROJECT_SOURCE_DIR}/../lib/include")
 
 link_directories("${PROJECT_SOURCE_DIR}/../godot-cpp/bin")
-
 
 add_library(${PROJECT_NAME} SHARED ${SRCS})
 target_link_libraries(${PROJECT_NAME} ${LIBS})
